@@ -1,12 +1,13 @@
 package org.loose.fis.bsa.services;
 import static org.loose.fis.bsa.services.FileSystemService.getPathToFile;
 
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import org.dizitart.no2.Nitrite;
 import org.dizitart.no2.objects.ObjectRepository;
-import org.loose.fis.bsa.exceptions.UsernameAlreadyExistsException;
-import org.loose.fis.bsa.exceptions.UsernameDoesNotExistException;
-import org.loose.fis.bsa.exceptions.WrongPasswordException;
-import org.loose.fis.bsa.exceptions.WrongRoleException;
+import org.loose.fis.bsa.exceptions.*;
+import org.loose.fis.bsa.model.LoggedUser;
+import org.loose.fis.bsa.model.Reservation;
 import org.loose.fis.bsa.model.User;
 
 import java.nio.charset.StandardCharsets;
@@ -14,28 +15,50 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Objects;
 
-
+// java -jar --module-path F:\javafx-sdk-18.0.1\lib --add-modules javafx.controls,javafx.fxml F:\nitrite-explorer-3.4.3.jar
 public class UserService {
 
     private static ObjectRepository<User> userRepository;
 
+    private static ObjectRepository<Reservation> reservationForUserRepository;
+
+    private static ObjectRepository<Reservation> reservationRepository;
+
+    private static Nitrite database;
+
     public static void initDatabase() {
-        Nitrite database = Nitrite.builder()
+
+        database = Nitrite.builder()
                 .filePath(getPathToFile("registration-example.db").toFile())
                 .openOrCreate("test", "test");
 
         userRepository = database.getRepository(User.class);
+        //reservationForUserRepository = database.getRepository(Reservation.class);
+        reservationRepository = database.getRepository(Reservation.class);
+
     }
 
-    public static void login (String username, String password, String role) throws UsernameDoesNotExistException, WrongPasswordException, WrongRoleException {
+
+
+    public static void addUser(String username, String password, String role) throws UsernameAlreadyExistsException {
+        checkUserDoesNotAlreadyExist(username);
+        userRepository.insert(new User(username, encodePassword(username, password), role));
+    }
+
+    public static void checkCredentials(String username, String password, String role) throws UsernameDoesNotExistException, WrongPasswordException, WrongRoleException {
         int verifPass = 1, verifUser = 1, verifRole = 1;
-        /* devine 0 daca exista */
-        for(User user : userRepository.find())
-        {
-            if(Objects.equals(username, user.getUsername())) verifUser = 0;
-            if(Objects.equals(encodePassword(username, password), user.getPassword())) verifPass = 0;
-            if(Objects.equals(role, user.getRole())) verifRole = 0;
+
+        for(User user : userRepository.find()) {
+            if(Objects.equals(user.getUsername(), username)) {
+                verifUser = 0;
+                if(Objects.equals(encodePassword(username, password), user.getPassword())) {
+                    verifPass = 0;
+                    if(Objects.equals(role, user.getRole()))
+                        verifRole = 0;
+                }
+            }
         }
+
         if(verifUser == 1)
             throw new UsernameDoesNotExistException(username);
         if(verifPass == 1)
@@ -45,10 +68,6 @@ public class UserService {
 
     }
 
-    public static void addUser(String username, String password, String role) throws UsernameAlreadyExistsException {
-        checkUserDoesNotAlreadyExist(username);
-        userRepository.insert(new User(username, encodePassword(username, password), role));
-    }
 
     private static void checkUserDoesNotAlreadyExist(String username) throws UsernameAlreadyExistsException {
         for (User user : userRepository.find()) {
@@ -56,6 +75,64 @@ public class UserService {
                 throw new UsernameAlreadyExistsException(username);
         }
     }
+
+
+
+    public static void addReservation(String username, String departmentfacilty, String date, String hour, int price) throws EmptyDateFieldException, EmptyDepartmentFieldException, EmptyHourFieldException, MakingReservationException, NotFreeWindowException {
+        checkEmptyFieldForReservation(username, departmentfacilty, date, hour);
+        //checkFreeWindow(department, date, hour);
+        //checkFreeWindowForUser(username, department, date, hour);
+        reservationRepository.insert(new Reservation(username, departmentfacilty, date, hour, price));
+    }
+
+    public static void checkEmptyFieldForReservation(String username, String departmentfacility, String date, String hour) throws EmptyDateFieldException, EmptyDepartmentFieldException, EmptyHourFieldException {
+        if(departmentfacility == "")
+            throw new EmptyDepartmentFieldException();
+        else if(date == "")
+            throw new EmptyDateFieldException();
+        else if(hour == "")
+            throw new EmptyHourFieldException();
+
+    }
+
+    public static void checkFreeWindow(String departmentfacility, String date, String hour) throws MakingReservationException {
+        int ok = 0;
+
+        for(Reservation reservation : reservationRepository.find())
+        {
+            if(departmentfacility.equals(reservation.getDepartmentfacility()))
+                if(date.equals(reservation.getDate()) && hour.equals(reservation.getHour()))
+                    ok = 1;
+        }
+        if(ok == 1)
+            throw new MakingReservationException();
+
+    }
+
+    public static void checkFreeWindowForUser(String username, String departmentfacility, String date, String hour) throws NotFreeWindowException {
+
+        int ok = 0;
+
+        for(Reservation reservation : reservationRepository.find()) {
+            if(username.equals(reservation.getUsername())) {
+                if(date.equals(reservation.getDate()) && hour.equals(reservation.getHour()))
+                    ok = 1;
+            }
+        }
+        if(ok == 1)
+            throw new NotFreeWindowException();
+    }
+
+    public static void creatingList() {
+        for (Reservation reservation : reservationRepository.find()) {
+            String[] parts = reservation.getDepartmentfacility().split(" - ");
+            reservation.setDepartment(parts[0]);
+            reservation.setFacility(parts[1]);
+            new Reservation(reservation.getUsername(), reservation.getDepartmentfacility(), reservation.getDate(), reservation.getHour(), reservation.getPrice());
+        }
+    }
+
+
 
     private static String encodePassword(String salt, String password) {
         MessageDigest md = getMessageDigest();
@@ -78,6 +155,7 @@ public class UserService {
         return md;
     }
 
+
     public static void addOption(String username, String option) {
         for (User user : userRepository.find()) {
             if (Objects.equals(username, user.getUsername())) {
@@ -87,6 +165,5 @@ public class UserService {
 
         }
     }
-
 
 }
